--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -19,7 +19,9 @@
   <h1>Privacy Policy</h1>
   <p>Last Revised: November 26, 2020</p>
   <p>
-    This Privacy Policy applies beginning September 9, 2020. You may change your
+    This Privacy Policy applies beginning September 9, 2020. 
+  </p>
+  <p> You may change your
     consent anytime in our App Settings. Apps(of/by SunSGame LLC)
     (or "we" or "us" or "Game" or "Games" or "Apps" or "App(s)" or "Tool" or "Tool in App" or
     "(of/by SunSGame LLC)" or 
@@ -38,7 +40,7 @@
 
   <h3>1. Data controller and representative (If used will be mentioned in the application)</h3>
   <p>
-    Apps(of SunSGame LLC), and its subsidiaries* (or "we", or "our" or "us" or "Apps" or "SunSGame LLC")
+    Apps, and its subsidiaries* (or "we", or "our" or "us" or "Apps")
     cares about the privacy of your personal information and is committed to
     protecting it. We may have to collect your personal data to provide you
     with the best and the most up-to-date security. We do not take
@@ -49,8 +51,8 @@
   </p>
 
   <p>
-    The Apps(of SunSGame LLC) Privacy Policy applies to all app by SunSGame LLC and unless
-    specified, its subsidiaries, including all app by SunSGame LLC and any contractors,
+    The Apps Privacy Policy applies to all app by we and unless
+    specified, its subsidiaries, including all app by we and any contractors,
     representatives, agents, and resellers while they are working on our
     behalf (collectively "we," "us" or "our" or Apps).
   </p>
