--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <h2 style="text-align: center;">
   <a href="https://sunsgames.github.io/PrivacyPolicy.html" rel="external nofollow noopener" target="_blank">
     Privacy Policy
-</a>
+  </a>
+  <a href="https://sunsgames.github.io/UserLicenseAgreement.html" rel="external nofollow noopener" target="_blank">
+    User License Agreement
+  </a>
 </h2>
 <h2 style="text-align: center;">Coming soon...</h2>
 <br>
