--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <a href="https://sunsgames.github.io/PrivacyPolicy.html" rel="external nofollow noopener" target="_blank">
     Privacy Policy
   </a>
+</h2>
+<h2 style="text-align: center;">
   <a href="https://sunsgames.github.io/UserLicenseAgreement.html" rel="external nofollow noopener" target="_blank">
     User License Agreement
   </a>
