--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h1 style="text-align: center;">&nbsp;</h1>
-<h1 style="text-align: center;"><span style="color: #0000ff;"><u>SunSGame LLC</u></span></h1>
+<h1 style="text-align: center;"><span style="color: #0000ff;"><u>SunSGame Ind</u></span></h1>
 <h2 style="text-align: center;">
   <a href="https://sunsgames.github.io/PrivacyPolicy.html" rel="external nofollow noopener" target="_blank">
     Privacy Policy
