--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <h2>Apps(of/by SunSGame LLC)</h2>
+  <h2>SunSGame Ind. All apps</h2>
   <h1>Privacy Policy</h1>
   <p>Last Revised: November 26, 2020</p>
   <p>
