--- a/UserLicenseAgreement.html
+++ b/UserLicenseAgreement.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <h2>Apps(of SunSGame LLC)</h2>
+  <h2>SunSGame Ind. All apps</h2>
   <h1>User License and Terms of Service Agreement</h1>
   <p>Last Revised: November 22, 2020</p>
   <p>User License and Terms of Service Agreement is applicable to all app and services is managed and create by SunSGame
