--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     User License Agreement
   </a>
 </h2>
+  <h2 style="text-align: center;">
+  <a href="https://sunsgames.github.io/DeletedAccount.html" rel="external nofollow noopener" target="_blank">
+    How to delete account in game
+  </a>
+</h2>
 <h2 style="text-align: center;">Coming soon...</h2>
 <br>
 <h2 style="text-align: center;"><p></p></h2>
