--- a/DeletedAccount.html
+++ b/DeletedAccount.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description"
+    content="This Privacy Policy applies beginning September 9, 2020. You may change your consent anytime in our App Settings. Apps(of SunSGame LLC in Google Play Store) (or "
+    we")="" collects="" information="" from="" you="" in="" order="" to="" provide="" better="" service="" and=""
+    give="" a="" user="" experience.="" we="" always="" put="" your="" privacy="" as="" the="" first="" consideration=""
+    policy="" explains="" how="" collect,="" use,="" protect="" information."="">
+  <title>Privacy Policy Apps(of SunSGame LLC)</title>
+</head>
+
+<body>
+<h2>In game click button Settings > DeleteAccount</h2>
+<h2>For some games, you will contact the publisher's email for support in deleting the game account</h2>
+</body>
+
+</html>
